--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <!-- <meta name="theme-color" content="#000000" /> -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/willdiep/parkingrabbit-frontend/master/readme/splash-page.png" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ParkingRabbit - Reverse Parking Spots in San Francisco"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -30,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ParkingRabbit</title>
+    <title>ParkingRabbit - Reverse Parking Spots in San Francisco</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
