Test - meta data in head

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,32 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="theme-color" content="#000000" /> -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/willdiep/parkingrabbit-frontend/master/readme/splash-page.png" />
+    <meta property="og:title" content="European Travel Destinations" />
+
     <meta
       name="description"
       content="ParkingRabbit - Reverse Parking Spots in San Francisco"
+    />
+    <meta property="og:image" content="https://via.placeholder.com/350 " />
+    <!-- <meta
+      property="og:image"
+      content="http://euro-travel-example.com/thumbnail.jpg"
+    /> -->
+    <meta
+      property="og:url"
+      content="http://euro-travel-example.com/index.htm"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
