Test - meta data in head

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="theme-color" content="#000000" /> -->
-    <meta property="og:title" content="European Travel Destinations" />
+    <meta property="og:title" content="ParkingRabbit - Reverse Parking Spots in San Francisco" />
 
     <meta
       name="description"
@@ -18,7 +18,7 @@
     /> -->
     <meta
       property="og:url"
-      content="http://euro-travel-example.com/index.htm"
+      content="https://www.parkingrabbit.me"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
