Test - meta data in head

--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,18 @@
       name="description"
       content="ParkingRabbit - Reverse Parking Spots in San Francisco"
     />
-    <meta property="og:image" content="https://via.placeholder.com/350 " />
-    <!-- <meta
-      property="og:image"
-      content="http://euro-travel-example.com/thumbnail.jpg"
-    /> -->
     <meta
       property="og:url"
       content="https://www.parkingrabbit.me"
     />
+
+    
+    <meta name="image" property="og:image" content="https://megan-wong.com/portfolio.png">
+    <meta property="og:image:url" content="https://megan-wong.com/portfolio.png">
+    <meta property="og:image:secure_url" content="https://megan-wong.com/portfolio.png">
+    <meta property="og:description" content="Megan Wong: Portfolio of my past projects, information about my background, blog posts, resume, and links to my social media">
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
