--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,34 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <meta name="theme-color" content="#000000" /> -->
-    <meta property="og:title" content="ParkingRabbit - Reverse Parking Spots in San Francisco" />
+    <meta
+      property="og:title"
+      content="ParkingRabbit - Reverse Parking Spots in San Francisco"
+    />
 
     <meta
       name="description"
       content="ParkingRabbit - Reverse Parking Spots in San Francisco"
     />
+    <meta property="og:url" content="https://www.parkingrabbit.me" />
+
     <meta
-      property="og:url"
-      content="https://www.parkingrabbit.me"
+      name="image"
+      property="og:image"
+      content="https://raw.githubusercontent.com/willdiep/parkingrabbit-frontend/master/readme/map-page.png"
     />
-
-    
-    <meta name="image" property="og:image" content="https://megan-wong.com/portfolio.png">
-    <meta property="og:image:url" content="https://megan-wong.com/portfolio.png">
-    <meta property="og:image:secure_url" content="https://megan-wong.com/portfolio.png">
-    <meta property="og:description" content="Megan Wong: Portfolio of my past projects, information about my background, blog posts, resume, and links to my social media">
-
+    <meta
+      property="og:image:url"
+      content="https://raw.githubusercontent.com/willdiep/parkingrabbit-frontend/master/readme/map-page.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://raw.githubusercontent.com/willdiep/parkingrabbit-frontend/master/readme/map-page.png"
+    />
+    <meta
+      property="og:description"
+      content="ParkingRabbit is a single-page, full-stack application to reserve parking spots in San Francisco. It uses React on the front-end and Ruby on Rails with a PostgresSQl database on the back-end"
+    />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
