Fix glitching/blinking sidebar listing render by moving a#addListingaMakers to fetchListing()

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,8 @@
       crossorigin="anonymous"
     />
 
+    <!-- <link rel="stylesheet" href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css"> -->
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.4.2/mapbox-gl-geocoder.min.js"></script>
