Replace readme images

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- <meta name="theme-color" content="#000000" /> -->
     <meta
       property="og:title"
-      content="ParkingRabbit - Reverse Parking Spots in San Francisco"
+      content="ParkingRabbit - Reserve Parking Spots in San Francisco"
     />
 
     <meta
