Add padding to CTA header responsively. Update README

--- a/README.html
+++ b/README.html
@@ -29,6 +29,16 @@
 <h3 id="x-parkingrabbit-front-end-repo">[x] <a href="https://github.com/willdiep/parkingrabbit-frontend">ParkingRabbit Front-end Repo</a></h3>
 <h3 id="parkingrabbit-back-end-repo"><a href="https://github.com/willdiep/parkingrabbit-backend">ParkingRabbit Back-end Repo</a></h3>
 <p>ParkingRabbit is a single-page, full-stack application to reserve parking spots in San Francisco. It uses React on the front-end as well as Ruby on Rails with a PostgresSQl database on the back-end.</p>
+
+<p>This is a three-week MVP capstone projct at Flatiron School from:
+  <ul>
+    <li>brainstorming project ideas</li>
+    <li>system design</li>
+    <li>collaborating with UX/UI designer</li>
+    <li>back-end development</li>
+    <li>front-end development</li>
+  </ul>
+
 <p><img src="file:////Users/willmacbook/Desktop/FLATIRON PROJECTS/PARKINGRABBIT PROJECT FILES/parkingrabbit-frontend/app/assets/images/readme/solobnb-demo.gif" alt=""></p>
 <h2 id="table-of-content">Table Of Content</h2>
 <ul>
