--- a/README.html
+++ b/README.html
@@ -30,7 +30,7 @@
 <h3 id="parkingrabbit-back-end-repo"><a href="https://github.com/willdiep/parkingrabbit-backend">ParkingRabbit Back-end Repo</a></h3>
 <p>ParkingRabbit is a single-page, full-stack application to reserve parking spots in San Francisco. It uses React on the front-end as well as Ruby on Rails with a PostgresSQl database on the back-end.</p>
 
-<p>This is a three-week MVP capstone projct at Flatiron School from:
+<p>This is a three-week MVP capstone projct at Flatiron School from: </p>
   <ul>
     <li>brainstorming project ideas</li>
     <li>system design</li>
